Remove old resume, fix spacing.

--- a/_sass/resume.scss
+++ b/_sass/resume.scss
@@ -283,7 +283,6 @@ div.section {
 
 .column-container {
 	columns: 2;
-	margin-bottom: 2rem;
 	column-gap: 2rem;
 }
 
